.txt readmes for each install type.  See SAK-3668.  Also caught a silly error on the dbconfig.html page.
git-svn-id: https://source.sakaiproject.org/svn/trunk/sakai@5628 66ffb92e-73f9-0310-93c1-f5514f145a0a